fix(segmented control): segmneted conrol scroll when overflow.

--- a/packages/assets/css/src/scss/_components/_segmented-control/_elements/_build-segmented-control.scss
+++ b/packages/assets/css/src/scss/_components/_segmented-control/_elements/_build-segmented-control.scss
@@ -16,6 +16,7 @@
 			display: flex;
 			align-items: stretch;
 			overflow-y: scroll;
+			overflow-x: hidden;
 			padding: $spacing-2xs;
 		}
 	}
